fixed alignment of presenters in event

--- a/src/features/Event/components/Presenters/Presenters.css
+++ b/src/features/Event/components/Presenters/Presenters.css
@@ -2,62 +2,85 @@
   color: #901A1E;
   font-size: 18px;
 }
+
 .wear {
   color: #901A1E;
   font-size: 18px;
 }
-.who{
+
+.who {
   color: #901A1E;
   font-size: 18px;
 }
-.date{
+
+.date {
   color: #262526;
   font-size: 21px;
 }
+
 .researchersTitle {
   color: #901A1E;
   font-size: 18px;
 
 }
-.location{
+
+.location {
   color: #262526;
   font-size: 21px;
 }
-.externalTitle{
+
+.externalTitle {
   color: #901A1E;
   font-size: 18px;
 
 }
-.line{
+
+.line {
   border-bottom: 2px solid #CCCBCC;
   border-top: 2px solid #CCCBCC;
   width: 80%;
   margin-left: 10%;
 }
-.researchersTell{
+
+.researchersTell {
   color: #747681;
   padding-top: 10%;
   font-size: 14px;
 
 }
-.externalEmail{
+
+.externalEmail {
   color: #747681;
   padding-top: 10%;
   font-size: 14px;
 
 }
-.researchersEmail{
+
+.researchersEmail {
   color: #747681;
   font-size: 14px;
 
 }
-.imgResearcher{
+
+.imgResearcher {
+
+  /*border-radius: 50%;*/
+}
+
+.imgResearch {
+  float: right;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+  object-fit: cover;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  outline: 1px solid #f1f1f1;
+
 }
 
-.imgResearch{
+.externalResearch {
   float: right;
   width: 70%;
   height: 70%;
@@ -66,35 +89,35 @@
   margin-top: 0;
   margin-bottom: 0;
   outline: 1px solid #f1f1f1;
-
-}
-.externalResearch{
-  float: right;
-  width: 70%;
-  height: 70%;
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-    outline: 1px solid #f1f1f1;
 }
 
-.Researchers{
+.Researchers {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  justify-items: center;
+  gap: 2em;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 5%;
+}
 
+.researcher_img_cont {
+  width: 5vw;
+  height: 5vw;
+
+}
+
+.externalResearchers {
   position: relative;
   width: 100%;
   height: 100%;
   margin: 5%;
   padding: 5%;
 }
-.externalResearchers{
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 5%;
-  padding: 5%;
-}
-.tableResercher{
+
+.tableResercher {
   width: 50%;
   height: 50%;
   margin-left: 100%;
@@ -102,12 +125,14 @@
   margin-top: 0;
   padding: 10%;
 }
-.resercherName{
+
+.resercherName {
   color: #262526;
   font-size: 21px;
   margin-top: 0;
 }
-.externalresercherName{
+
+.externalresercherName {
   color: #262526;
   font-size: 21px;
   margin-top: 0;
